--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="edit_text_margin_small">5dp</dimen>
     <dimen name="standard_margin">15dp</dimen>
     <dimen name="edit_text_width">80dp</dimen>
+    <dimen name="bar_height">150dp</dimen>
+    <dimen name="padding_normal">5dp</dimen>
 </resources>
