--- a/app/src/main/res/layout/guild_description.xml
+++ b/app/src/main/res/layout/guild_description.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
         android:contentDescription="@string/guild_icon_description"
-        app:srcCompat="@mipmap/ic_gb_golgari" />
+        tools:srcCompat="@mipmap/ic_gb_golgari" />
 
     <TextView
         android:id="@+id/guild_description"
@@ -19,6 +20,6 @@
         android:layout_height="match_parent"
         android:layout_weight="0.7"
         android:gravity="center_vertical"
-        android:text="@string/mana_calculator_hint_land_black" />
+        tools:text="@string/mana_calculator_hint_land_black" />
 
 </LinearLayout>
